<resources>
    <string name="app_name">Weather</string>

    <!-- Form fragment. -->
    <string name="form_city_name">City name</string>
    <string name="form_from_map">From map</string>
    <string name="form_archive">Archive</string>

    <!-- Location picker fragment. -->
    <string name="location_picker_label">Select location</string>
    <string name="location_picker_prompt">Long tap to select</string>

    <!-- Archive fragment. -->
    <string name="archive_label">Archive</string>
    <string name="archive_no_data">No data yet.</string>

    <!-- Presentation fragment. -->
    <string name="presentation_label">Presentation</string>
    <string name="presentation_name">Name:</string>
    <string name="presentation_temp">Temp:</string>
    <string name="presentation_pressure">Pressure:</string>
    <string name="presentation_humidity">Humidity:</string>
    <string name="presentation_temp_min">Temp min:</string>
    <string name="presentation_temp_max">Temp max:</string>
    <string name="presentation_error">Error</string>

</resources>
